@@ -4,6 +4,10 @@ debian-installer (20041119) UNRELEASED; urgency=low
     - Add module-init-tools to build deps for ia64 to fix truncated
       modules.dep files and USB keyboard.
     - Add it for sparc too.
+  * Thiemo Seufer
+    - Do an e2fsck for the extra floppy images.
+    - Handle sparse files in cramfs images more efficiently.
+    - Use cramfs images for mips/r4k-ip22 and mips/r5k-ip22.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 22 Nov 2004 16:35:47 -0500
 
